04-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: banco-galicia
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
