07-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-grpc-service
  namespace: banco-galicia
spec:
  type: NodePort
  selector:
    app: app-grpc-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080  
      name: rest
    - protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 30090 
      name: grpc
