09-grpc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: banco-galicia
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: nginx
  rules:
    - host: grpc.flux-bancogalicia.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-grpc-service
                port:
                  number: 9090
  tls:
  - hosts:
      - grpc.flux-bancogalicia.com
    secretName: banco-galicia-certs
